syntax = "proto3";

package auth;

option go_package = "stormlink/server/grpc/auth/protobuf;protobuf";

import "google/api/annotations.proto";

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v1/users/login"
      body: "*"
    };
  };
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string accessToken = 1;
  string refreshToken = 2;
}
